<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChartCountryActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_margin="15dp"
        android:padding="10dp"
        android:background="@drawable/bg_header_gray"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            tools:ignore = "NestedWeight">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/img_flag_country"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="10dp"
                android:src="@mipmap/ic_launcher"
                tools:ignore = "NestedWeight" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardElevation="5dp"
                app:cardCornerRadius="8dp"
                android:layout_margin="10dp"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/txt_name_country"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="20sp"
                        android:text="@string/nama_negara"
                        android:gravity="center"/>

                    <TextView
                        android:id="@+id/latest_update"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textSize="12sp"
                        android:text="@string/currently"
                        android:gravity="center" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardElevation="5dp"
                app:cardCornerRadius="8dp"
                app:cardBackgroundColor="@color/orange"
                android:layout_margin="10dp"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:textSize="12sp"
                        android:text="@string/total_confirmed"
                        android:gravity="center"/>

                    <TextView
                        android:id="@+id/hasil_total_confirmed_currently"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:text="@string/total_confirmed"
                        android:gravity="center" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardElevation="5dp"
                app:cardCornerRadius="8dp"
                app:cardBackgroundColor="@color/orange_gray"
                android:layout_margin="10dp"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:textSize="12sp"
                        android:text="@string/new_confirmed"
                        android:gravity="center"/>

                    <TextView
                        android:id="@+id/hasil_new_confirmed_currently"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:text="@string/new_confirmed"
                        android:gravity="center" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardElevation="5dp"
                app:cardCornerRadius="8dp"
                app:cardBackgroundColor="@color/yellow"
                android:layout_margin="10dp"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textColor="@color/red"
                        android:textSize="12sp"
                        android:text="@string/total_deaths"
                        android:gravity="center"/>

                    <TextView
                        android:id="@+id/hasil_total_deaths_currently"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textColor="@color/red"
                        android:textSize="20sp"
                        android:text="@string/total_deaths"
                        android:gravity="center" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardElevation="5dp"
                app:cardCornerRadius="8dp"
                app:cardBackgroundColor="@color/yellow_gray"
                android:layout_margin="10dp"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textColor="@color/red"
                        android:textSize="12sp"
                        android:text="@string/new_deaths"
                        android:gravity="center"/>

                    <TextView
                        android:id="@+id/hasil_new_deaths_currently"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textColor="@color/red"
                        android:textSize="20sp"
                        android:text="@string/new_deaths"
                        android:gravity="center" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardElevation="5dp"
                app:cardCornerRadius="8dp"
                app:cardBackgroundColor="@color/colorAccent"
                android:layout_margin="10dp"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:textSize="12sp"
                        android:text="@string/recovered"
                        android:gravity="center"/>

                    <TextView
                        android:id="@+id/hasil_total_recovered_currently"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/recovered"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardElevation="5dp"
                app:cardCornerRadius="8dp"
                app:cardBackgroundColor="@color/blue_gray"
                android:layout_margin="10dp"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="12sp"
                        android:text="@string/new_recovered"
                        android:gravity="center"/>

                    <TextView
                        android:id="@+id/hasil_new_recovered_currently"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/new_recovered"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <com.github.mikephil.charting.charts.BarChart
            android:id="@+id/barChartView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp" />

    </LinearLayout>

</LinearLayout>